# MoneyCreatorFree

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  HERMES.md  LICENSE  OPENCLAW.md  README.md  pyproject.toml
docs/: moss-tts-setup.md  workflow.md
examples/: economy_15s.yaml  finance_15s.yaml  society_15s.yaml
moneycreator/: cli.py  moss.py  pipeline.py  wizard.py
scripts/: make_3_examples.sh  setup_all.ps1  setup_all.sh
